--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Testing</title>
     </head>
     <body>
-
+        Hello world!
     </body>
 </html>
