--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -1,31 +1,25 @@
 <div class = "FullWrapper" style="padding-left: 100px; padding-right: 100px; padding-bottom: 50px;">
-<form>
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword2">
-    </div>
-    <div class ="mb-3">
-        <label for="exampleInputPhoneNumber" class="form-label">Phone Number</label>
-        <input type ="tel" class="form-control" id="exampleInputPhoneNumber">
-    </div>
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-
-    <button type="submit" class="btn btn-primary" >Submit</button>
-    
-    <button onclick="location.href='register'" type="button" class="btn btn-primary" 
-     >
-        Sign Up Here</button>
-</form>
+    <form id="loginform">
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="coughing">
+            <label class="form-check-label" for="coughing">coughing</label>
+        </div>
+        <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="sneezing">
+            <label class="form-check-label" for="sneezing">sneezing</label>
+        </div>
+        <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="aches">
+            <label class="form-check-label" for="aches">aches</label>
+        </div>
+        <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="fever">
+            <label class="form-check-label" for="fever">fever</label>
+        </div>
+        <button type="submit" class="btn btn-primary" >Submit</button>
+    </form>
 </div>
