--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,10 +12,7 @@
       <a href="/contact" class="nav-link">Contact</a>
     </li>
     <li class="nav-item">
-      <a href="/admin" class="nav-link">Admin</a>
-    </li>
-    <li class="nav-item">
-      <a href="/login" class="nav-link">Login</a>
+      <a href="/addData" class="nav-link">Add Your Data</a>
     </li>
   </ul>
 </nav>
