7/18/2021-Addition of Comments

--- a/views/addData.ejs
+++ b/views/addData.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!--Page that takes Person Symptoms and gives it to a database-->
 <HTML>
 <head>
   <%- include('./partials/head'); %>
