--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--Gives out contact info for creators-->
 <head>
     <%- include('./partials/head'); %>
 </head>
