--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Home pages that gives info over Project and Coronavirus-->
 <head>
   <%- include('./partials/head'); %>
 </head>
