--- a/public/main.css
+++ b/public/main.css
@@ -1,15 +1,16 @@
 h1 {
     font-family: serif;
 }
-/**index.ejs tags**/
-#body{font-size: 50px; text-align: center;}
+/**Used in all ejs**/
+#body{font-size: 50px; text-align: center;}/**Used in Home Only**/
 #HIPPA{color: red;}
 #bottomer{text-align: center;}
 .navbar navbar-expand-lg navbar-light bg-light{ background-color: purple;}
-.Wrapper1{max-width: 500px; margin-right:500px}/**Used in about.ejs**/
-.Wrapper2{max-width: 600px; margin-left: 500px; font-style: italic; font-family: cursive; margin-top: -550px;}/**Used in about.ejs**/
+.Wrapper2{max-width: 600px; margin-left: 500px; font-style: italic; 
+    font-family: cursive; margin-top: -550px;}
+.Wrapper1{max-width: 500px; margin-right:500px}
 .FullWrapper{border-top: 5px solid purple;border-bottom: 5px solid purple; 
-    border-left: 5px solid purple;border-right: 5px solid purple;}
+border-left: 5px solid purple;border-right: 5px solid purple;}
 .link{color: purple; text-decoration: none;}
 .link-cont{margin-top: 20px;}
 .IMG{ max-height:150px; max-width: 150px;}
