--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--Gives info over project and Coronavirus-->
 <head>
     <%- include('./partials/head'); %>
 </head>
